test_results.txt
============================= test session starts ==============================
platform darwin -- Python 3.13.3, pytest-9.0.1, pluggy-1.6.0 -- /Users/bjh/Desktop/cell_OS/env/bin/python3.13
cachedir: .pytest_cache
rootdir: /Users/bjh/Desktop/cell_OS
configfile: pyproject.toml
plugins: anyio-4.11.0
collecting ... collected 57 items / 1 error

==================================== ERRORS ====================================
______________ ERROR collecting tests/test_stressor_expansion.py _______________
env/lib/python3.13/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
env/lib/python3.13/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/opt/homebrew/Cellar/python@3.13/3.13.3_1/Frameworks/Python.framework/Versions/3.13/lib/python3.13/importlib/__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
env/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
env/lib/python3.13/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/opt/homebrew/Cellar/python@3.13/3.13.3_1/Frameworks/Python.framework/Versions/3.13/lib/python3.13/ast.py:54: in parse
    return compile(source, filename, mode, flags,
E     File "/Users/bjh/Desktop/cell_OS/tests/test_stressor_expansion.py", line 7
E       import pytest
E       ^^^^^^
E   IndentationError: expected an indented block after 'if' statement on line 5
=========================== short test summary info ============================
ERROR tests/test_stressor_expansion.py
!!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
=============================== 1 error in 1.54s ===============================
